Dando deploy correto